analysis/spring-framework/step_1/logs/10388-481aeee.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test
:buildSrc:check
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:compileJavaNote: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/xml/ResourceEntityResolver.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-beans:processResources
:spring-beans:classes
:spring-beans:jar
:spring-aop:compileJava/home/ubuntu/bugs/spring-framework/spring-aop/src/main/java/org/springframework/aop/target/AbstractPrototypeBasedTargetSource.java:46: warning: [serial] serializable class AbstractPrototypeBasedTargetSource has no definition of serialVersionUID
public abstract class AbstractPrototypeBasedTargetSource extends AbstractBeanFactoryBasedTargetSource {
                ^
/home/ubuntu/bugs/spring-framework/spring-aop/src/main/java/org/springframework/aop/target/AbstractPoolingTargetSource.java:53: warning: [serial] serializable class AbstractPoolingTargetSource has no definition of serialVersionUID
public abstract class AbstractPoolingTargetSource extends AbstractPrototypeBasedTargetSource
                ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 warnings

:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources UP-TO-DATE
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-context/src/main/java/org/springframework/validation/beanvalidation/MethodValidationInterceptor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJavaNote: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava/home/ubuntu/bugs/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/core/SqlRowSetResultSetExtractor.java:138: warning: CachedRowSetImpl is internal proprietary API and may be removed in a future release
			return new com.sun.rowset.CachedRowSetImpl();
			                         ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 warning

:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-context-support/src/main/java/org/springframework/cache/ehcache/EhCacheFactoryBean.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-oxm/src/main/java/org/springframework/oxm/xstream/XStreamMarshaller.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/util/UriComponents.java:42: warning: [serial] serializable class UriComponents has no definition of serialVersionUID
public abstract class UriComponents implements Serializable {
                ^
Note: /home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/client/HttpComponentsStreamingClientHttpRequest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 warning

:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileJava/home/ubuntu/bugs/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/AbstractEntityManagerFactoryBean.java:83: warning: [serial] serializable class AbstractEntityManagerFactoryBean has no definition of serialVersionUID
public abstract class AbstractEntityManagerFactoryBean implements
                ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/ubuntu/bugs/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/EntityManagerFactoryUtils.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 warning

:spring-orm:processResources UP-TO-DATE
:spring-orm:classes
:spring-orm-hibernate4:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-orm-hibernate4/src/main/java/org/springframework/orm/hibernate4/SessionFactoryUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

:spring-orm-hibernate4:processResources UP-TO-DATE
:spring-orm-hibernate4:classes
:spring-orm:jar
:spring-aspects:compileJava
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-instrument-tomcat:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-instrument-tomcat/src/main/java/org/springframework/instrument/classloading/tomcat/TomcatInstrumentableClassLoader.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-instrument-tomcat:processResources UP-TO-DATE
:spring-instrument-tomcat:classes
:spring-instrument-tomcat:jar
:spring-instrument-tomcat:sourcesJar
:spring-instrument-tomcat:assemble
:spring-instrument-tomcat:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-jms:compileJavaNote: /home/ubuntu/bugs/spring-framework/spring-jms/src/main/java/org/springframework/jms/listener/endpoint/StandardJmsActivationSpecFactory.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-jms:processResources
:spring-jms:classes
:spring-jms:jar
:spring-jms:sourcesJar
:spring-jms:assemble
:spring-jms:build
:spring-websocket:compileJava/home/ubuntu/bugs/spring-framework/spring-websocket/src/main/java/org/springframework/web/socket/server/support/TomcatRequestUpgradeStrategy.java:68: error: constructor WsHandshakeRequest in class WsHandshakeRequest cannot be applied to given types;
		WsHandshakeRequest webSocketRequest = new WsHandshakeRequest(servletRequest);
		                                      ^
  required: HttpServletRequest,Map<String,String>
  found: HttpServletRequest
  reason: actual and formal argument lists differ in length
/home/ubuntu/bugs/spring-framework/spring-websocket/src/main/java/org/springframework/web/socket/server/support/TomcatRequestUpgradeStrategy.java:84: error: method preInit in class WsHttpUpgradeHandler cannot be applied to given types;
		upgradeHandler.preInit(endpoint, endpointConfig, serverContainer, webSocketRequest,
		              ^
  required: Endpoint,EndpointConfig,WsServerContainer,WsHandshakeRequest,List<Extension>,String,Transformation,Map<String,String>,boolean
  found: Endpoint,ServerEndpointConfig,WsServerContainer,WsHandshakeRequest,String,Map<String,String>,boolean
  reason: actual and formal argument lists differ in length
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-websocket:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 42.768 secs
